--- a/html/service.html
+++ b/html/service.html
@@ -93,6 +93,86 @@
            Достигнуты ключевые договоренности с партнерами для оказания <b>услуги ремонта после ДТП</b>еще более выгодно</p>
       </div>
     </section>
+    <section class="real_company"> 
+      <div class="main_container"> 
+        <h2>Полностью легальная и реальная компания</h2>
+        <p>Служба аварийных комиссаров «50-50-50» — полностью локальная калининградская компания с реальным, а не фейковым офисом, опытом, людьми, отзывами и сданными делами.</p>
+        <div class="real_company_cards"> 
+          <div class="real_company_card"> <img src="./images/real_company1.svg" alt="">
+            <h5>Юрлицо</h5>
+            <p>ИП Кириченко Сергей Викторович<br>ИНН 390500303344<br>ОГРНИП 31039251660004</p><a href="#">Проверить</a>
+          </div>
+          <div class="real_company_card"> <img src="./images/real_company2.svg" alt="">
+            <h5>Юрлицо</h5>
+            <p>ИП Кириченко Сергей Викторович<br>ИНН 390500303344<br>ОГРНИП 31039251660004</p><a href="#">Проверить</a>
+          </div>
+          <div class="real_company_card"> <img src="./images/real_company3.svg" alt="">
+            <h5>Юрлицо</h5>
+            <p>ИП Кириченко Сергей Викторович<br>ИНН 390500303344<br>ОГРНИП 31039251660004</p><a href="#">Проверить</a>
+          </div>
+        </div>
+        <div class="bg_number">50-50-50</div>
+      </div>
+    </section>
+    <section class="advantages"> 
+      <div class="main_container"> 
+        <h2>Наши преимущества — это ваше удобство</h2>
+        <div class="advantages_in"> 
+          <div class="advantages_card"> <img src="./images/advantages_card1.svg" alt="">
+            <h4>Скорость</h4>
+            <p>Чтобы быстро прибыть на место ДТП «стоим» во всех районах города.</p>
+          </div>
+          <div class="advantages_card"> <img src="./images/advantages_card2.svg" alt="">
+            <h4>Ремонт после ДТП</h4>
+            <p>Оформим ДТП, прожмем страховую, отремонтируем.</p>
+          </div>
+          <div class="advantages_card"> <img src="./images/advantages_card3.svg" alt="">
+            <h4>Гарантии</h4>
+            <p>На все услуги мы даём гарантию, как фактическую, так и человеческую.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about_services"> 
+      <div class="main_container"> 
+        <div class="bg_number">50-50-50</div>
+        <h2>Где узнать больше о нас и наших услугах?</h2>
+        <p>Пожалуйста, ознакомьтесь с нашими публикациями на ведущих региональных новостных и аналитических СМИ. Они помогут Вам узнать больше о нас и о наших услугах.</p>
+        <div class="about_services_in"> <a href="#"><img src="./images/services1.png" alt=""></a><a href="#"><img src="./images/services2.png" alt=""></a><a href="#"><img src="./images/services3.png" alt=""></a><a href="#"><img src="./images/services4.png" alt=""></a><a href="#"><img src="./images/services5.png" alt=""></a><a href="#"><img src="./images/services6.png" alt=""></a><a href="#"><img src="./images/services7.png" alt=""></a><a href="#"><img src="./images/services8.png" alt=""></a><a href="#"><img src="./images/services9.png" alt=""></a><a href="#"><img src="./images/services10.png" alt=""></a><a href="#"></a></div>
+      </div>
+    </section>
+    <section class="newsline"> 
+      <div class="main_container"> 
+        <div class="bg_number bg_number_one">50-50-50</div>
+        <div class="bg_number">50-50-50</div>
+        <h2>Лента новостей</h2><span>20.10.2023</span>
+        <p>Аварийный комиссар в Калининграде о порядке действий при ДТП</p><span>20.10.2023</span>
+        <p>Юридическое сопровождение при ДТП в Калининграде от аварийных комиссаров</p><span>20.10.2023</span>
+        <p>Услуги аварийного комиссара в Калининграде</p><span>20.10.2023</span>
+        <p>Калининградская служба аварийных комиссаров рассказывает, что делать, если виновник ДТП скрылся</p><span>20.10.2023</span>
+        <p>Аварийный комиссар в Калининграде о порядке действий при ДТП</p><a class="newsline_link" href="#">Еще </a>
+      </div>
+    </section>
+    <section class="emergency"> 
+      <div class="main_container"> 
+        <h2>Журнал аварийного комиссара</h2>
+        <p>Уникальный проект не имеющий аналогов в России. Ведем позновательный журнал о жизни на дорогах Калининграда. Разбираем ситуации, даём советы, констатируем факты.</p>
+        <div class="emergency_cards"> 
+          <div class="emergency_card"> 
+            <div class="emergency_img"> <img src="./images/emergency_card_new.png" alt=""></div><span>20.11.2020</span>
+            <p>Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в Калининграде о порядке. </p>
+          </div>
+          <div class="emergency_card"> 
+            <div class="emergency_img"> <img src="./images/emergency_card_new.png" alt=""></div><span>20.11.2020</span>
+            <p>Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в</p>
+          </div>
+          <div class="emergency_card"> 
+            <div class="emergency_img"> <img src="./images/emergency_card_new.png" alt=""></div><span>20.11.2020</span>
+            <p>Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в</p>
+          </div>
+        </div><a class="emergency_link" href="#">Весь журнал </a>
+      </div>
+    </section>
     <footer class="footer"> 
       <div class="main_container"> 
         <div class="footer_top"> 
