about media tayyor

--- a/html/service.html
+++ b/html/service.html
@@ -141,9 +141,29 @@
         <div class="about_services_in"> <a href="#"><img src="./images/services1.png" alt=""></a><a href="#"><img src="./images/services2.png" alt=""></a><a href="#"><img src="./images/services3.png" alt=""></a><a href="#"><img src="./images/services4.png" alt=""></a><a href="#"><img src="./images/services5.png" alt=""></a><a href="#"><img src="./images/services6.png" alt=""></a><a href="#"><img src="./images/services7.png" alt=""></a><a href="#"><img src="./images/services8.png" alt=""></a><a href="#"><img src="./images/services9.png" alt=""></a><a href="#"><img src="./images/services10.png" alt=""></a><a href="#"></a></div>
       </div>
     </section>
+    <section class="work"> 
+      <div class="main_container"> 
+        <h2>Как выглядит наша работа?</h2>
+        <p>Обращаясь в службу помощи при ДТП «50-50-50», вы получаете квалифицированную помощь независимо от степени тяжести аварии.</p>
+      </div><img class="desktop_img" src="./images/work_desktop.png" alt=""><img class="mobile_img" src="./images/work_mobile.png" alt="">
+    </section>
+    <section class="partners"> 
+      <div class="main_container"> 
+        <div class="bg_number">50-50-50</div>
+        <h2>Наши ключевые партнеры</h2>
+        <p>За годы работы мы сформировали множество как устных, так и договорных отношений со всеми компаниями и инстанциями участвующими в процессах возникающих после ДТП.</p>
+        <div class="about_services_in"> <a href="#"><img src="./images/partner1.png" alt=""></a><a href="#"><img src="./images/partner2.png" alt=""></a><a href="#"><img src="./images/partner3.png" alt=""></a><a href="#"><img src="./images/partner4.png" alt=""></a><a href="#"><img src="./images/partner5.png" alt=""></a><a href="#"><img src="./images/partner6.png" alt=""></a><a href="#"><img src="./images/partner7.png" alt=""></a><a href="#"><img src="./images/partner8.png" alt=""></a><a href="#"><img src="./images/partner8.png" alt=""></a><a href="#"><img src="./images/partner8.png" alt=""></a><a href="#"></a></div>
+      </div>
+    </section>
+    <section class="comment"> 
+      <div class="main_container"> 
+        <h2>Отзывы</h2>
+        <p>Мы не пишем сами себе отзывы. Основные отзывы о нас можно найти на Яндекс.Картах, где самая жесткая модерация и исключены накрутки.</p><img src="./images/comment_img.png" alt="">
+      </div>
+    </section>
     <section class="newsline"> 
       <div class="main_container"> 
-        <div class="bg_number bg_number_one">50-50-50</div>
+        <div class="bg_number_one">50-50-50</div>
         <div class="bg_number">50-50-50</div>
         <h2>Лента новостей</h2><span>20.10.2023</span>
         <p>Аварийный комиссар в Калининграде о порядке действий при ДТП</p><span>20.10.2023</span>
