help qismini mediasiga keldim

--- a/html/index.html
+++ b/html/index.html
@@ -62,7 +62,71 @@
         </div>
       </div>
     </header>
-    <h1>Main</h1>
+    <section class="home"> 
+      <div class="home_wrapper"> 
+        <div class="bg_number">50-50-50</div>
+        <div class="home_img"> <img src="./images/home_img.png" alt=""></div>
+        <div class="home_text"> 
+          <h1>Городская служба аварийных комиссаров Калининграда</h1>
+          <p>Срочная помощь в оформлении ДТП. Выезд бесплатный в течении 15 минут.</p>
+          <div class="home_btns"> <a href="tel:505050"><img src="./images/phone_icon.svg" alt="">50-50-50 </a><img src="./images/home_icon.svg" alt=""></div>
+          <div class="home_bottom"> 
+            <div class="home_bottom_block"> <span>Что делать при ДТП?</span><span>Как работает Служба</span></div>
+            <div class="home_bottom_block"> <span>Чем и как мы Вам поможем?</span><span>Примеры работы Службы</span></div>
+            <div class="home_bottom_block"> <span>Вызвать ГИБДД, Скорую</span><span>Прочие вопросы</span></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="accident"> 
+      <div class="main_container"> 
+        <h2>Что делать при ДТП?</h2>
+        <p>Чтобы правильно оформить ДТП следуйте инструкции:</p>
+        <div class="accident_in"> 
+          <div class="accident_card"> <span class="circle"></span><span class="number">1</span>
+            <p>Заглушите двигатель и не меняйте положение автомобиля.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="assistance"> 
+      <div class="main_container"> 
+        <h2>Как работает наша служба помощи при ДТП</h2>
+        <div class="assistance_in"> 
+          <div class="assistance_card"> <img src="./images/assistance1.png" alt="">
+            <h4>Звонок</h4>
+            <p>Ваш звонок примет оператор и направит к Вам ближайшего комиссара.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="help"> 
+      <div class="main_container"> 
+        <h2>Чем и как мы Вам поможем?</h2>
+        <p>Мы окажем Вам свесторонню помощь и будем защищать Ваши интересы.</p>
+        <div class="bg_number">50-50-50</div>
+        <div class="help_in"> 
+          <div class="help_card"> <img src="./images/help_icon.svg" alt="">
+            <p>Если это возможно, оформим ДТП без участия ГИБДД.</p>
+          </div>
+          <div class="help_card"> <img src="./images/help_icon.svg" alt="">
+            <p>Если без ГИБДД нельзя, то вызовем из нужного района.</p>
+          </div>
+          <div class="help_card"> <img src="./images/help_icon.svg" alt="">
+            <p>Проведем замеры, фото и видео фиксацию места ДТП без ошибок.</p>
+          </div>
+          <div class="help_card"> <img src="./images/help_icon.svg" alt="">
+            <p>Максимально честно оформим ДТП, поможем с эвакуацией авто.</p>
+          </div>
+          <div class="help_card"> <img src="./images/help_icon.svg" alt="">
+            <p>Полностью возьмем на себя все заботы по страховой компании.</p>
+          </div>
+          <div class="help_card"> <img src="./images/help_icon.svg" alt="">
+            <p>Сразу выплатим ущерб или отремонтируем Ваш автомобиль.</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="footer"> 
       <div class="main_container"> 
         <div class="footer_top"> 
