--- a/html/service.html
+++ b/html/service.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./fonts/FactorA/stylesheet.css">
-    <link rel="stylesheet" href="./fonts/DINPro/stylesheet.css">
+    <link rel="stylesheet" href="./fonts/DINPro/stylesheet.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
   </head>
@@ -93,24 +93,95 @@
            Достигнуты ключевые договоренности с партнерами для оказания <b>услуги ремонта после ДТП</b>еще более выгодно</p>
       </div>
     </section>
+    <section class="scheme_work"> 
+      <div class="main_container"> 
+        <div class="title">Схема работы компании</div>
+        <div class="description">Мы начинали всего с двух машин в центре Калининграда и всего за три года стали одной из ведущих служб помощи при ДТП.</div>
+        <div class="swiper sheme_work_slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="slide_content"> 
+                <div class="number">1</div><img src="./images/work_slide_icon_1.svg" alt="">
+                <div class="slide_title">Диспетчер</div>
+                <div class="slide_description">Специалисты по оформлению ДТП. Фото и видео фиксация.</div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="slide_content"> 
+                <div class="number">2</div><img src="./images/work_slide_icon_2.svg" alt="">
+                <div class="slide_title">Аварийный комиссар</div>
+                <div class="slide_description">Специалисты по оформлению ДТП. Фото и видео фиксация.</div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="slide_content"> 
+                <div class="number">3</div><img src="./images/work_slide_icon_3.svg" alt="">
+                <div class="slide_title">Эвакуатор</div>
+                <div class="slide_description">Эвакуция с места ДТП до любого места хранения.</div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="slide_content"> 
+                <div class="number">4</div><img src="./images/work_slide_icon_4.svg" alt="">
+                <div class="slide_title">Экспертиза</div>
+                <div class="slide_description">Независимая экспертиза попреждений автомобиля.</div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="slide_content"> 
+                <div class="number">5</div><img src="./images/work_slide_icon_5.svg" alt="">
+                <div class="slide_title">Страховые менеджеры</div>
+                <div class="slide_description">Помощь с оформлением документов в страховую компанию.</div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="slide_content"> 
+                <div class="number">6</div><img src="./images/work_slide_icon_6.svg" alt="">
+                <div class="slide_title">Юридическое <br> сопровождение</div>
+                <div class="slide_description">Помощь в спрорах со страховыми компаниями.</div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="slide_content"> 
+                <div class="number">7</div><img src="./images/work_slide_icon_7.svg" alt="">
+                <div class="slide_title">Помощь с ремонтом</div>
+                <div class="slide_description">Помощь с ремнотом авто после ДТП, включая кузовной ремонт.</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="scheme_work_1_pagination"></div>
+        <div class="description_2">
+           На сегодняшний момент калининградская служба аварийных комиссаров «50-50-50», пожалуйста, самая известная и надёжная в Калининграде служба помощи при ДТП «под ключ». Мы добились присутствия по всех необходимых этапах разрешения последствий после ДТП, полностью отточили все механизмы, достигли десятков договоренностей и договорных соглашений.</div>
+      </div>
+    </section>
     <section class="real_company"> 
       <div class="main_container"> 
         <h2>Полностью легальная и реальная компания</h2>
         <p>Служба аварийных комиссаров «50-50-50» — полностью локальная калининградская компания с реальным, а не фейковым офисом, опытом, людьми, отзывами и сданными делами.</p>
-        <div class="real_company_cards"> 
-          <div class="real_company_card"> <img src="./images/real_company1.svg" alt="">
-            <h5>Юрлицо</h5>
-            <p>ИП Кириченко Сергей Викторович<br>ИНН 390500303344<br>ОГРНИП 31039251660004</p><a href="#">Проверить</a>
-          </div>
-          <div class="real_company_card"> <img src="./images/real_company2.svg" alt="">
-            <h5>Юрлицо</h5>
-            <p>ИП Кириченко Сергей Викторович<br>ИНН 390500303344<br>ОГРНИП 31039251660004</p><a href="#">Проверить</a>
-          </div>
-          <div class="real_company_card"> <img src="./images/real_company3.svg" alt="">
-            <h5>Юрлицо</h5>
-            <p>ИП Кириченко Сергей Викторович<br>ИНН 390500303344<br>ОГРНИП 31039251660004</p><a href="#">Проверить</a>
+        <div class="swiper real_company_cards">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="real_company_card"> <img src="./images/real_company1.svg" alt="">
+                <h5>Юрлицо</h5>
+                <p>ИП Кириченко Сергей Викторович<br>ИНН 390500303344<br>ОГРНИП 31039251660004</p><a href="#">Проверить</a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="real_company_card"> <img src="./images/real_company2.svg" alt="">
+                <h5>Юрлицо</h5>
+                <p>ИП Кириченко Сергей Викторович<br>ИНН 390500303344<br>ОГРНИП 31039251660004</p><a href="#">Проверить</a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="real_company_card"> <img src="./images/real_company3.svg" alt="">
+                <h5>Юрлицо</h5>
+                <p>ИП Кириченко Сергей Викторович<br>ИНН 390500303344<br>ОГРНИП 31039251660004</p><a href="#">Проверить</a>
+              </div>
+            </div>
           </div>
         </div>
+        <div class="real_company_cards_pagination"></div>
         <div class="bg_number">50-50-50</div>
       </div>
     </section>
@@ -234,7 +305,7 @@
           <p>© 2009-2023 Индивидуальный            предприниматель Кириченко Сергей Викторович ИНН 390500303344, ОГРНИП 310392516600043. 236010. Продолжая использовать наш сайт, Вы даете согласие на обработку файлов Cookie в целях функционирования сайта, а так же сбора и анализа обезличенных статистических данных с использованием сервисов Google Analytics и Яндекс.Метрика. Все материалы данного сайта являются объектами авторского права (в том числе и дизайн). Запрещается копирование, распространение информации и изображений сайта. Сайт носит информационный характер и не является публичной офертой. По всем вопросам связанным разработкой и рекламой данного сайта в сети Интернет просьба обращаться в специализированную seo-компанию. Нормативные правовые акты, регламентирующие деятельность по обеспечению безопасности дорожного движения можно найти по сссылке.</p>
         </div>
       </div>
-    </footer>
+    </footer><script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/bootstrap.js"></script>
     <script src="./js/bootstrap-bundle.js"></script>
