--- a/html/reference.html
+++ b/html/reference.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./fonts/FactorA/stylesheet.css">
-    <link rel="stylesheet" href="./fonts/DINPro/stylesheet.css">
+    <link rel="stylesheet" href="./fonts/DINPro/stylesheet.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
   </head>
@@ -124,7 +124,7 @@
           <p>© 2009-2023 Индивидуальный            предприниматель Кириченко Сергей Викторович ИНН 390500303344, ОГРНИП 310392516600043. 236010. Продолжая использовать наш сайт, Вы даете согласие на обработку файлов Cookie в целях функционирования сайта, а так же сбора и анализа обезличенных статистических данных с использованием сервисов Google Analytics и Яндекс.Метрика. Все материалы данного сайта являются объектами авторского права (в том числе и дизайн). Запрещается копирование, распространение информации и изображений сайта. Сайт носит информационный характер и не является публичной офертой. По всем вопросам связанным разработкой и рекламой данного сайта в сети Интернет просьба обращаться в специализированную seo-компанию. Нормативные правовые акты, регламентирующие деятельность по обеспечению безопасности дорожного движения можно найти по сссылке.</p>
         </div>
       </div>
-    </footer>
+    </footer><script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/bootstrap.js"></script>
     <script src="./js/bootstrap-bundle.js"></script>
