--- a/html/index.html
+++ b/html/index.html
@@ -115,6 +115,45 @@
         <div class="scheme_work_3_pagination"></div>
       </div>
     </section>
+    <section class="assistance"> 
+      <div class="main_container"> 
+        <h2>Как работает наша служба помощи при ДТП</h2>
+        <div class="swiper assistance_slider assistance_in">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"> 
+              <div class="assistance_card"> <img src="./images/assistance1.png" alt=""><img class="icon" src="./images/chevron_right.svg" alt="">
+                <h4>Звонок</h4>
+                <p>Ваш звонок примет оператор и направит к Вам ближайшего комиссара.</p>
+              </div>
+            </div>
+            <div class="swiper-slide"> 
+              <div class="assistance_card"> <img src="./images/assistance_slide_2.svg" alt=""><img class="icon" src="./images/chevron_right.svg" alt="">
+                <h4>Звонок</h4>
+                <p>Ваш звонок примет оператор и направит к Вам ближайшего комиссара.</p>
+              </div>
+            </div>
+            <div class="swiper-slide"> 
+              <div class="assistance_card"> <img src="./images/assistance1.png" alt=""><img class="icon" src="./images/chevron_right.svg" alt="">
+                <h4>Звонок</h4>
+                <p>Ваш звонок примет оператор и направит к Вам ближайшего комиссара.</p>
+              </div>
+            </div>
+            <div class="swiper-slide"> 
+              <div class="assistance_card"> <img src="./images/assistance1.png" alt=""><img class="icon" src="./images/chevron_right.svg" alt="">
+                <h4>Звонок</h4>
+                <p>Ваш звонок примет оператор и направит к Вам ближайшего комиссара.</p>
+              </div>
+            </div>
+            <div class="swiper-slide"> 
+              <div class="assistance_card"> <img src="./images/assistance1.png" alt=""><img class="icon" src="./images/chevron_right.svg" alt="">
+                <h4>Звонок</h4>
+                <p>Ваш звонок примет оператор и направит к Вам ближайшего комиссара.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="footer"> 
       <div class="main_container"> 
         <div class="footer_top"> 
