--- a/html/index.html
+++ b/html/index.html
@@ -128,32 +128,169 @@
             </div>
             <div class="swiper-slide"> 
               <div class="assistance_card"> <img src="./images/assistance_slide_2.svg" alt=""><img class="icon" src="./images/chevron_right.svg" alt="">
-                <h4>Звонок</h4>
-                <p>Ваш звонок примет оператор и направит к Вам ближайшего комиссара.</p>
+                <h4>Ожидание</h4>
+                <p>Дождитесь приезда нашего аварийного комиссара. Он будет в течении 15 минут.</p>
               </div>
             </div>
             <div class="swiper-slide"> 
-              <div class="assistance_card"> <img src="./images/assistance1.png" alt=""><img class="icon" src="./images/chevron_right.svg" alt="">
-                <h4>Звонок</h4>
-                <p>Ваш звонок примет оператор и направит к Вам ближайшего комиссара.</p>
+              <div class="assistance_card"> <img src="./images/assistance_slide_3.svg" alt=""><img class="icon" src="./images/chevron_right.svg" alt="">
+                <h4>Оценка</h4>
+                <p>После прибытия на место ДТП комиссар приступит к оценке ситуации.</p>
               </div>
             </div>
             <div class="swiper-slide"> 
-              <div class="assistance_card"> <img src="./images/assistance1.png" alt=""><img class="icon" src="./images/chevron_right.svg" alt="">
-                <h4>Звонок</h4>
-                <p>Ваш звонок примет оператор и направит к Вам ближайшего комиссара.</p>
+              <div class="assistance_card"> <img src="./images/assistance_slide_4.svg" alt=""><img class="icon" src="./images/chevron_right.svg" alt="">
+                <h4>Оформление</h4>
+                <p>Принимаются решения, ДТП правильно оформляется с ГИБДД или без него.</p>
               </div>
             </div>
             <div class="swiper-slide"> 
-              <div class="assistance_card"> <img src="./images/assistance1.png" alt=""><img class="icon" src="./images/chevron_right.svg" alt="">
-                <h4>Звонок</h4>
-                <p>Ваш звонок примет оператор и направит к Вам ближайшего комиссара.</p>
+              <div class="assistance_card"> <img src="./images/assistance_slide_5.svg" alt=""><img class="icon last" src="./images/chevron_right.svg" alt="">
+                <h4>Помощь</h4>
+                <p>После оформления Вы получаете ту или иную помощь от нашей службы.</p>
               </div>
             </div>
           </div>
         </div>
+        <div class="assistance_slider_pagination"></div>
       </div>
     </section>
+    <section class="help"> 
+      <div class="main_container"> 
+        <h2>Чем и как мы Вам поможем?</h2>
+        <p>Мы окажем Вам свесторонню помощь и будем защищать Ваши интересы.</p>
+        <div class="bg_number">50-50-50</div>
+        <div class="help_in"> 
+          <div class="help_card"> <img src="./images/help_icon.svg" alt="">
+            <p>Если это возможно, оформим ДТП без участия ГИБДД.</p>
+          </div>
+          <div class="help_card"> <img src="./images/help_icon.svg" alt="">
+            <p>Если без ГИБДД нельзя, то вызовем из нужного района.</p>
+          </div>
+          <div class="help_card"> <img src="./images/help_icon.svg" alt="">
+            <p>Проведем замеры, фото и видео фиксацию места ДТП без ошибок.</p>
+          </div>
+          <div class="help_card"> <img src="./images/help_icon.svg" alt="">
+            <p>Максимально честно оформим ДТП, поможем с эвакуацией авто.</p>
+          </div>
+          <div class="help_card"> <img src="./images/help_icon.svg" alt="">
+            <p>Полностью возьмем на себя все заботы по страховой компании.</p>
+          </div>
+          <div class="help_card"> <img src="./images/help_icon.svg" alt="">
+            <p>Сразу выплатим ущерб или отремонтируем Ваш автомобиль.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="main_container cards_in d-flex flex-wrap align-items-start">
+      <div class="card_item"> <img class="card_img" src="./images/prices_card_1.png" alt="">
+        <div class="card_text"> 
+          <div class="text_title">Выезд аварийного комиссара <br> на место ДТП</div>
+          <div class="text_subtitle">Бесплатно</div>
+        </div>
+      </div>
+      <div class="card_item"> <img class="card_img" src="./images/prices_card_2.png" alt="">
+        <div class="card_text"> 
+          <div class="text_title">Фото и видеофиксация места ДТП</div>
+          <div class="text_subtitle">Бесплатно при заказе оформления</div>
+        </div>
+      </div>
+      <div class="card_item"> <img class="card_img" src="./images/prices_card_3.png" alt="">
+        <div class="card_text"> 
+          <div class="text_title">Консультация и оформление ДТП</div>
+          <div class="text_subtitle">900 рублей</div>
+        </div>
+      </div>
+      <div class="card_item"> <img class="card_img" src="./images/prices_card_4.png" alt="">
+        <div class="card_text"> 
+          <div class="text_title">Эвакуация авто с места ДТП</div>
+          <div class="text_subtitle">Бесплатно</div>
+        </div>
+      </div>
+      <div class="card_item"> <img class="card_img" src="./images/prices_card_5.png" alt="">
+        <div class="card_text"> 
+          <div class="text_title">Подготовка документов для обращения в страховую компанию</div>
+          <div class="text_subtitle">От  1 000 рублей</div>
+        </div>
+      </div>
+      <div class="card_item"> <img class="card_img" src="./images/prices_card_6.png" alt="">
+        <div class="card_text"> 
+          <div class="text_title">Юридическое сопровождение по последствиям ДТП</div>
+          <div class="text_subtitle">От  1 000 рублей</div>
+        </div>
+      </div>
+      <div class="card_item"> <img class="card_img" src="./images/prices_card_7.png" alt="">
+        <div class="card_text"> 
+          <div class="text_title">Независимая экспертиза повреждений автомобиля</div>
+          <div class="text_subtitle">От 4 000 рублей</div>
+        </div>
+      </div>
+      <div class="card_item"> <img class="card_img" src="./images/prices_card_8.png" alt="">
+        <div class="card_text"> 
+          <div class="text_title">Ремонт автомобиля после ДТП</div>
+          <div class="text_subtitle">В зависимости от повреждений</div>
+        </div>
+      </div>
+    </div>
+    <section class="real_company"> 
+      <div class="main_container"> 
+        <h2>Полностью легальная и реальная компания</h2>
+        <p>Служба аварийных комиссаров «50-50-50» — полностью локальная калининградская компания с реальным, а не фейковым офисом, опытом, людьми, отзывами и сданными делами.</p>
+        <div class="swiper real_company_cards">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="real_company_card"> <img src="./images/real_company1.svg" alt="">
+                <h5>Юрлицо</h5>
+                <p>ИП Кириченко Сергей Викторович<br>ИНН 390500303344<br>ОГРНИП 31039251660004</p><a href="#">Проверить</a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="real_company_card"> <img src="./images/real_company2.svg" alt="">
+                <h5>Юрлицо</h5>
+                <p>ИП Кириченко Сергей Викторович<br>ИНН 390500303344<br>ОГРНИП 31039251660004</p><a href="#">Проверить</a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="real_company_card"> <img src="./images/real_company3.svg" alt="">
+                <h5>Юрлицо</h5>
+                <p>ИП Кириченко Сергей Викторович<br>ИНН 390500303344<br>ОГРНИП 31039251660004</p><a href="#">Проверить</a>
+              </div>
+            </div>
+          </div>
+          <div class="real_company_cards_pagination"></div>
+          <div class="bg_number">50-50-50</div>
+        </div>
+      </div>
+    </section>
+    <div class="index_bottom"> 
+      <div class="main_container"> 
+        <div class="index_in"> 
+          <div class="index_card"> 
+            <h4>Как вызывать ГИБДД?</h4>
+            <p>
+               Наберите с мобильного <span>55-25-11 </span>– это телефон дежурной части ГИБДД Центрального района Калининграда.</p><a href="#">Вызвать ГИБДД </a>
+          </div>
+          <div class="index_card"> 
+            <h4>Как вызывать ГИБДД?</h4>
+            <p>
+               В Калининграде вызвать скорую медицинскую помощь с мобильного телефона можно по единому номеру <span>103.</span></p><a href="#">Вызвать Скорую</a>
+          </div>
+          <div class="index_card"> 
+            <h4>Как вызывать ГИБДД?</h4>
+            <p>
+               Выезд нашего аварийного комиссара на место ДТП с Вашим участием бесплатный. Стоимость комплексной помощи в фиксации и оформлении европротокола (когда ДТП оформляется без участия ГИБДД) – 900 рублей.</p><a href="#">Уточнить все цены</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="main_container index_bottom_text"><img src="./images/index_bottom_img.png" alt="">
+      <div class="bottom_text"> 
+        <p>
+           Обращаясь в службу помощи при ДТП «50-50-50», вы получаете квалифицированную помощь независимо от степени тяжести аварии. Наши сотрудники готовы предложить свои услуги на любом этапе оформления документов и решения необходимых вопросов. Всего через 15 минут после звонка, к вам прибудет специалист, эксперт по ДТП. Если вы <span>арендовали авто в Калининграде</span>и попали на нем в ДТП - звоните! Мы поможем и в таком случае, чтобы владельцы автопроката вас не провели.</p>
+        <p>
+           Нередко случаются ситуации, когда авария незначительная и без пострадавших, но при этом стороны не могут прийти к соглашению, кто виновен. Чтобы не привлекать дорожную инспекцию к ситуации, стоит обратиться к аварийному комиссару. Опытный специалист проведет оценку ситуации и проработает все дорожные улики и свидетельства. Таким образом, будет установлен ущерб, причиненным сторонам. Проще говоря, такой спецпосредник поможет сторонам в конце концов справедливо договориться.</p>
+      </div>
+    </div>
     <footer class="footer"> 
       <div class="main_container"> 
         <div class="footer_top"> 
